--- a/styles.css
+++ b/styles.css
@@ -192,8 +192,8 @@ a:hover, .website:hover {
 @media only screen and (max-width: 600px) {
 
     .flip-container, .front, .back {
-        height: 120px;
-        width: 220px;
+        height: 100%;
+        width: 100%;
     }
 
     .centered {
@@ -204,8 +204,8 @@ a:hover, .website:hover {
     }
     
     .center{
-        height: 120px;
-        width: 220px;
+        height: 100%;
+        width: 100%;
         background-image: url("images\front.png");
         /* width: 250px;*/
         /* height: 250px; 
@@ -236,8 +236,8 @@ a:hover, .website:hover {
     }
     
     .back{
-        height: 120px;
-        width: 230px;
+        height: 100%;
+        width: 100%;
         /* position: relative;
         text-align: center;
         color: white; */
@@ -254,8 +254,8 @@ a:hover, .website:hover {
         left: 37%; */
         align-items: center; 
         margin-left: -2%; 
-        height: 120px;
-        width: 230px;
+        height: 100%;
+        width: 100%;
         background-image: url("images\smllbgback.png");
         /* padding-top: 5%; */
         /* display: block;  */
@@ -338,4 +338,4 @@ a:hover, .website:hover {
         box-shadow: inset 0 50px  #000;
         color: #fff;
     }
-}  
+}
